--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="Nestle powder milk Distributors" />
 <title>Yield The Benefits of Nestle’s Powdered Milk</title>
 <meta name="description" content="With Nestle's instant milk powder, Nestlé Everyday, enhances the flavor of the tea. Every milk-based cuisine may be prepared using Nestlé Everyday. It has no sugar at all.">
-<link rel="canonical" href="">
+<link rel="canonical" href="https://nestle-powder-milk-distributors.netlify.app/">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/s3-urls/page-5-styles.css" />
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
